insertion de api pour recuperer le montant total en base de donnees
